# EM-Architecture

./: .gitignore  ARCHITECTURE.md  DOCS.md  INSTALL.md  Makefile  README.md  ROADMAP.md  agentConversation.md  agentsNotes.md  setup.md
control/: .env.example  README.md  SPEC.md  agentNotes.md  pyproject.toml  setup.md  start.sh
control/src/control/: __init__.py  audit.py  auth.py  campaign_metadata.py  config.py  deps.py  logbook.py  main.py  orchestrator.py  ports.py  provenance.py  safety.py  state.py  workers.py
control/src/control/adapters/: __init__.py  ad2.py  base.py  chipshouter.py  chipshover.py  husky.py  scaffold.py  xds110.py
control/src/control/routers/: __init__.py  campaigns.py  config.py  devices.py  motion.py  runs.py  safety.py  shouter.py  target.py  ws.py
control/src/control/tools/: __init__.py  __main__.py  reindex.py
control/tests/: test_ad2.py  test_audit.py  test_auth.py  test_campaign_metadata.py  test_campaigns_preflight.py  test_chipshouter.py  test_chipshover.py  test_devices_power.py  test_dual_target_protocol.py  test_health.py  test_husky.py  test_logbook.py  test_motion_fixture.py  test_orchestrator.py  test_provenance.py  test_runs_export.py  test_safety.py  test_scaffold.py  test_state.py  test_target_flash.py  test_workers.py  test_xds110.py
develop/: AUDIT.md  README.md  SPEC.md  agentNotes.md  pyproject.toml  setup.md  start.sh
develop/backend/develop/: __init__.py  agent.py  auth.py  broadcaster.py  builds.py  config.py  disassemble.py  git_ops.py  logging_config.py  main.py  presets.py  projects.py  targets.py
develop/backend/develop/routers/: __init__.py  agent.py  artifacts.py  builds.py  disassembly.py  git.py  host_script.py  presets.py  projects.py  prompt.py  targets.py  templates.py  ws.py
develop/backend/develop/templates/c_ti_hal/: Makefile  linker.ld  project.toml.template
develop/backend/develop/templates/rust_b01lers/: Cargo.toml  project.toml.template
develop/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
develop/frontend/src/: app.html
develop/frontend/src/lib/: api.ts  types.ts  ws.ts
develop/frontend/src/routes/: +layout.svelte  +page.svelte
develop/tests/: test_auth.py  test_builds.py  test_disassemble.py  test_health.py  test_projects.py
docs/: automation.md  (+1 more)
protocol/: README.md  pyproject.toml
protocol/emfi_protocol/: __init__.py  auth.py  campaigns.py  devices.py  projects.py  runs.py  ws_events.py
view/: SPEC.md  (+8 more)
(+69 files in other folders)
