[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "develop"
version = "0.1.0"
description = "EMFI Develop: firmware projects, builds, disassembly, agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pyelftools>=0.30",
    "tomli>=2.0; python_version < '3.11'",
    "emfi-protocol",
]

[project.optional-dependencies]
extras = [
    "capstone>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
